k8s/namespaces/dex/02-service.yml

apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: dex
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "dex"}'
    cloud.google.com/app-protocols: '{"dex":"HTTP2"}'
    external-dns.alpha.kubernetes.io/hostname: "dex.pulsifer.dev"
  labels:
    app.kubernetes.io/name: dex
    app.kubernetes.io/part-of: dex
spec:
  externalName: dex.puslifer.dev
  type: LoadBalancer
  ports:
  - port: 443
    targetPort: 443
    name: dex
  selector:
    app.kubernetes.io/name: dex
    app.kubernetes.io/part-of: dex
